--- a/m1/src/index.html
+++ b/m1/src/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Самый главный тег на странице -->
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Main title">
     <meta name="author" content="keys4wrds">
-    <title>Home</title>
+    <title>Wordpress интенсив</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hey, folks!</h1>
+    <section class="promo">
+        <div class="container">
+            <div class="logo">
+                <img src="icons/logo.png" alt="logo" class="logo_img">
+                <div class="logo_text">Wordpress интенсив</div>
+            </div>
+            <h1 class="title">Создать свой сайт на wordpress</h1>
+            <div class="simple">
+                <h2 class="title_big">это просто!</h2>
+                <div class="line"></div>
+            </div>
+            <h2 class="title">Куда сложнее сделать это правильно!</h2>
+            <div class="promo_text">
+                Ежедневно в России появляется более 5 000 новых сайтов.<br>
+                И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span >бесплатном</span> интентсиве!
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
