--- a/m1/src/index.html
+++ b/m1/src/index.html
@@ -23,7 +23,34 @@
             <h2 class="title">Куда сложнее сделать это правильно!</h2>
             <div class="promo_text">
                 Ежедневно в России появляется более 5 000 новых сайтов.<br>
-                И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span >бесплатном</span> интентсиве!
+                И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span >БЕСПЛАТНОМ</span> интентсиве!
+            </div>
+            <button class="promo_btn">Записаться на интенсив!</button>
+            <div class="more">
+                <div class="more_text">узнать больше об интентсиве</div>
+                <img src="icons/arrow_down.png" alt="" class="more_img">
+            </div>
+        </div>
+    </section>
+
+    <section class="waiting">
+        <div class="container">
+            <h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
+            <div class="waiting_divider"></div>
+            <div class="waiting_subheader">2 бесплатных полноценных обучающих вебинара, где:</div>
+            <div class="waiting_wrapper">
+                <div class="waiting_item">
+                    <img src="img/1.png" alt="" class="waiting_img">
+                    <div class="waiting_desc">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на WordPress.</div>
+                </div>
+                <div class="waiting_item">
+                    <img src="img/2.png" alt="" class="waiting_img">
+                    <div class="waiting_desc">Покажем, как правильно оптимизировать сайт и сделать его привлекательным для поисковых систем. Только свежая, профессиональная и актуальная информация!</div>
+                </div>
+                <div class="waiting_item">
+                    <img src="img/3.png" alt="" class="waiting_img">
+                    <div class="waiting_desc">Вы узнаете, что такое "хорошая индексация", "высокая посещаемость", "стабильный прирост посетителей", "ТОП по запросам" и, что намного важнее, как добиться всех этих показателей!</div>
+                </div>
             </div>
         </div>
 
