--- a/m1/src/index.html
+++ b/m1/src/index.html
@@ -69,5 +69,18 @@
         </div>
       </div>
     </section>
+
+    <section class="optimization">
+      <div class="container">
+        <h2 class="optimization_header">Что такое оптимизация и зачем она нужна?</h2>
+        <div class="optimization_text">На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из инх не совпадает не только по категориям, но и по содержанию.<br><br>
+          Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах. <br><br>
+          Но как Вам быть, если Ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация - для вывода Вашего сайтй на первую страницу поиска! <br><br>
+          <span>Мы научим Вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех конкурентов.</span>
+        </div>
+        <img src="img/woman_bg.jpg" alt="woman" class="optimization_img">
+      </div>
+    </section>
+
   </body>
 </html>
