--- a/m1/src/index.html
+++ b/m1/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Main title" />
     <meta name="author" content="keys4wrds" />
     <title>Wordpress интенсив</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -34,7 +35,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="waiting">
       <div class="container">
         <h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
@@ -72,15 +73,73 @@
 
     <section class="optimization">
       <div class="container">
-        <h2 class="optimization_header">Что такое оптимизация и зачем она нужна?</h2>
-        <div class="optimization_text">На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из инх не совпадает не только по категориям, но и по содержанию.<br><br>
-          Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах. <br><br>
-          Но как Вам быть, если Ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация - для вывода Вашего сайтй на первую страницу поиска! <br><br>
-          <span>Мы научим Вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех конкурентов.</span>
+        <h2 class="optimization_header">
+          Что такое оптимизация и зачем она нужна?
+        </h2>
+        <div class="optimization_text">
+          На просторах интернета несчетное количество действующих и даже
+          заброшенных сайтов. Большинство из инх не совпадает не только по
+          категориям, но и по содержанию.<br /><br />
+          Представьте себе тысячи сайтов, на которых тем или иным образом
+          предоставляется одна и та же информация или одна и та же услуга. И
+          попасть на эти сайты можно лишь по тематическим запросам в поисковых
+          системах. <br /><br />
+          Но как Вам быть, если Ваш сайт похож на сотню или тысячу таких же, а
+          на одной странице гугла или яндекса всего 10 позиций? Как привести
+          посетителей страницы своего ресурса? Именно для этого и нужна
+          оптимизация - для вывода Вашего сайтй на первую страницу поиска!
+          <br /><br />
+          <span
+            >Мы научим Вас, как сделать ваш сайт привлекательным для поисковых
+            систем и посоветуем, как вывести его на первые страницы, обходя всех
+            конкурентов.</span
+          >
         </div>
-        <img src="img/woman_bg.jpg" alt="woman" class="optimization_img">
+        <img src="img/woman_bg.jpg" alt="woman" class="optimization_img" />
       </div>
     </section>
+    <section class="finish">
+      <div class="container">
+        <h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+        <div class="finish_divider"></div>
+        <div class="finish_wrapper">
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="icons/1.png" alt="1" class="finish_icon">
+            </div>
+            <div class="finish_desc">Создать свой сайт или блог</div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="icons/2.png" alt="2" class="finish_icon">
+            </div>
+            <div class="finish_desc">Правильно его оптимизировать</div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="icons/3.png" alt="3" class="finish_icon">
+            </div>
+            <div class="finish_desc">Обеспечить ему медленный, но верный рост в ТОП</div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="icons/4.png" alt="4" class="finish_icon">
+            </div>
+            <div class="finish_desc">Достигнуть стабильного прироста посетителей</div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="icons/5.png" alt="5" class="finish_icon">
+            </div>
+            <div class="finish_desc">Получить ощутимую прибыль</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="gift">
+      
+    </section>
+
 
   </body>
 </html>
