--- a/m1/src/index.html
+++ b/m1/src/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="keys4wrds" />
     <title>Wordpress интенсив</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -136,10 +137,31 @@
         </div>
       </div>
     </section>
+    
     <section class="gift">
-      
+      <div class="container">
+        <img src="icons/gift.png" alt="gift" class="gift_img">
+        <div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!
+        </div>
+        <button class="gift_btn">Записаться на интенсив!</button>
+      </div>
     </section>
 
+    <section class="first">
+      <div class="container">
+        <img src="img/first.png" alt="first_webinar" class="first_img">
+        <div class="first_text">Первый вебинар состоится:</div>
+        <h2 class="date">10 сентября в 20:00 по Москве</h2>
+        <div class="first_subtitle">Успейте записаться, количество мест ограничено!</div>
+      </div>
+    </section>
+    <footer>
+      <div class="info">
+        <a href="#" class="underlined">Служба поддержки</a>
+        <a href="#" class="underlined">Политика конфиденциальности</a>
+        Позвоните нам <a href="tel:+88005550121">8-800-555-01-21</a>
+      </div>
+    </footer>
 
   </body>
 </html>
