implements media and jumbotron

--- a/sandbox/3_10_media_object.html
+++ b/sandbox/3_10_media_object.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- 23 -->
 <html lang="en">
 
 <head>
@@ -88,9 +88,9 @@
         <!--#####################START HERE######################-->
 
         <!-- MEDIA OBJECT -->
-        <div>
-            <img src="https://source.unsplash.com/random/90x90">
-            <div>
+        <div class="media">
+            <img class="mr-3" src="https://source.unsplash.com/random/90x90">
+            <div class="media-body">
                 <h5>Media heading</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                 vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
@@ -102,19 +102,19 @@
         <br>
 
         <!-- NESTING MEDIA OBJECTS -->
-        <div>
-            <img src="https://source.unsplash.com/random/90x91">
-            <div>
+        <div class="media">
+            <img class="mr-3" src="https://source.unsplash.com/random/90x91">
+            <div class="media-body">
                 <h5>Media heading</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                 vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
                 felis in faucibus.
 
-                <div>
+                <div class="media mt-2">
                     <a href="#">
-                        <img src="https://source.unsplash.com/random/90x92">
+                        <img class="mr-2" src="https://source.unsplash.com/random/90x92">
                     </a>
-                    <div>
+                    <div class="media-body">
                         <h5>Nested Media</h5>
                         Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                         vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
@@ -128,9 +128,9 @@
         <br>
 
         <!-- TOP ALIGNED (DEFAULT) -->
-        <div>
-            <img src="https://source.unsplash.com/random/90x93">
-            <div>
+        <div class="media">
+            <img class="aling-self-start mr-3" src="https://source.unsplash.com/random/90x93">
+            <div class="media-body">
                 <h5>Top aligned media</h5>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
                     vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
@@ -142,13 +142,11 @@
         <br>
 
         <!-- CENTER ALIGNED -->
-        <div>
-            <img src="https://source.unsplash.com/random/90x94">
-            <div>
+        <div class="media">
+            <img class="mr-3 align-self-center" src="https://source.unsplash.com/random/90x94">
+            <div class="media-body">
                 <h5>Center aligned media</h5>
-                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
-                    vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                    Donec lacinia congue felis in faucibus.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, deleniti, unde a repellat atque beatae voluptas tenetur nulla, nisi sed inventore ducimus officia in porro reiciendis. Doloribus sit atque autem fuga cum modi perferendis iusto velit temporibus quia ad dolorum, officiis provident illum! Adipisci neque itaque distinctio maxime voluptas, perspiciatis corrupti pariatur aperiam eveniet dolorem quasi laboriosam autem ex officia ducimus exercitationem voluptatem aspernatur enim! Vero eveniet ipsum velit et corrupti temporibus repellendus possimus. Neque libero dolores inventore. Repudiandae accusamus accusantium fugiat enim iusto facilis id, magni consequatur eveniet quis. Esse perspiciatis vitae quibusdam consequuntur suscipit iure recusandae libero minus, dolorum animi hic eligendi eos exercitationem aspernatur at placeat illum maiores quidem natus iste modi sapiente eum aut ea? Error dolor dolorum vitae nulla non assumenda harum consectetur explicabo dolorem, maxime sapiente qui. Omnis ipsa velit beatae ea vero perspiciatis labore quos eligendi dolore, vel, vitae, autem maxime sint quo.</p>
             </div>
         </div>
 
@@ -156,11 +154,11 @@
         <br>
 
         <!-- BOTTOM ALIGNED -->
-        <div>
-            <img src="https://source.unsplash.com/random/90x95">
-            <div>
+        <div class="media">
+            <img class="mr-3 align-self-end" src="https://source.unsplash.com/random/90x95">
+            <div class="media-body">
                 <h5>Bottom aligned media</h5>
-                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea beatae laborum fugit repudiandae qui id illo quidem! Assumenda perspiciatis laborum, ut incidunt aliquid cumque molestias impedit facilis doloremque totam animi dolores consectetur sit dolorem quis inventore. Doloribus sunt est beatae totam libero recusandae neque illo minima atque architecto aspernatur, voluptatem tempore necessitatibus ab asperiores! Possimus eveniet nemo numquam quis eligendi esse, ut error accusantium, commodi impedit iste inventore ullam, voluptatem quaerat quidem autem natus ex at ipsam dolor ratione quo perspiciatis. Id maiores reiciendis ullam sunt nisi, rerum commodi blanditiis perspiciatis doloribus sed, autem ipsam tenetur in, optio quos aut. Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
                     vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
                     Donec lacinia congue felis in faucibus.</p>
             </div>
@@ -170,28 +168,28 @@
         <br>
 
         <!-- MEDIA LIST -->
-        <ul>
-            <li>
-                <img src="https://source.unsplash.com/random/90x96">
-                <div>
+        <ul class="list-unstyled">
+            <li class="media">
+                <img class="mr-3" src="https://source.unsplash.com/random/90x96">
+                <div class="media-body">
                     <h5>List based media object</h5>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                     vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                     congue felis in faucibus.
                 </div>
             </li>
-            <li>
-                <img src="https://source.unsplash.com/random/90x97">
-                <div>
+            <li class="media">
+                <img class="mr-3" src="https://source.unsplash.com/random/90x97">
+                <div class="media-body">
                     <h5>List based media object</h5>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                     vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                     congue felis in faucibus.
                 </div>
             </li>
-            <li>
-                <img src="https://source.unsplash.com/random/90x98">
-                <div>
+            <li class="media">
+                <img class="mr-3" src="https://source.unsplash.com/random/90x98">
+                <div class="media-body">
                     <h5>List based media object</h5>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                     vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
