--- a/m2/src/index.html
+++ b/m2/src/index.html
@@ -1,36 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Home</title>
   </head>
   <body>
     <header>
+      <nav>
         <div class="container">
-            <nav>
-                <ul class="menu">
-                    <li class="menu_item"><a href="#" class="menu_link"></a></li>
-                    <li class="menu_item"><a href="#" class="menu_link"></a></li>
-                    <li class="menu_item"><a href="#" class="menu_link"></a></li>
-                    <li class="menu_item"><a href="#" class="menu_link"></a></li>
-                    <li class="menu_item"><a href="#" class="menu_link"></a></li>
-                </ul>
-            </nav>
+          <ul class="menu">
+            <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Со своим автомобилем</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">На автомобиле компании</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Требования</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Контакты</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Оставить заявку</a>
+            </li>
+          </ul>
         </div>
+      </nav>
+      <div class="subheader">
+        <div class="container">
+          <div class="col-md-4 offset-md-1">
+667
+          </div>
+          <div class="col-md-2 offset-md-2">
+            5623
+          </div>
+          <div class="col-md-2">2345</div>
+        </div>
+      </div>
     </header>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
