--- a/m2/src/index.html
+++ b/m2/src/index.html
@@ -1,76 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Home</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="container">
-          <ul class="menu">
-            <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Со своим автомобилем</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">На автомобиле компании</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Требования</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Контакты</a>
-            </li>
-            <li class="menu_item">
-              <a href="#" class="menu_link">Оставить заявку</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="subheader">
-        <div class="container">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
+  <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
+
+  <title>Home</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="container">
+        <ul class="menu">
+          <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+          <li class="menu_item">
+            <a href="#" class="menu_link">Со своим автомобилем</a>
+          </li>
+          <li class="menu_item">
+            <a href="#" class="menu_link">На автомобиле компании</a>
+          </li>
+          <li class="menu_item">
+            <a href="#" class="menu_link">Требования</a>
+          </li>
+          <li class="menu_item">
+            <a href="#" class="menu_link">Контакты</a>
+          </li>
+          <li class="menu_item">
+            <a href="#" class="menu_link">Оставить заявку</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="subheader">
+      <div class="container">
+        <div class="row">
           <div class="col-md-4 offset-md-1">
-667
+            <a href="#" class="subheader_logo"><img src="icons/logo.png" alt=""></a>
+            <div class="subheader_official">Официальный партнер Uber в Москве</div>
           </div>
           <div class="col-md-2 offset-md-2">
-            5623
+            <div class="subheader_call">Звоните нам ежедневно</div>
+            <a href="tel:84951234567" class="subheader_phone">8 495 123-45-67</a>
           </div>
-          <div class="col-md-2">2345</div>
+          <div class="col-md-2">
+            <button class="subheader_btn">заказать звонок</button>
+          </div>
+
         </div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <section class="promo">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 offset-md-1">
+          <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
+          <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ НА СВОЕМ АВТО!</h2>
+          <div class="promo_desc">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место
+            среди
+            таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном
+            кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за
+            пиковое время.
+            <br><br>
+            Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве. Водители у нас
+            зарабатывают от 80000- 120000 в месяц.
+          </div>
+          <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="reasons">
+    <div class="container">
+      <div class="label">преимущества</div>
+      <h2 class="title">8 причин начать работать с нами</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_1.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
+              <div class="reasons_text">
+                Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков
+                связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие
+                деньги для размена.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_2.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
+              <div class="reasons_text">
+                У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты
+                оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_3.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
+              <div class="reasons_text">
+                Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП,
+                платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_4.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
+              <div class="reasons_text">
+                Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с
+                линии. Вы можете подрабатывать только утром, вечером, в выходные или праздничные дни!
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_5.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
+              <div class="reasons_text">
+                Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии
+                документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать
+                работать!
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_6.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Всегда большое количество заказов</div>
+              <div class="reasons_text">
+                Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У
+                Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные
+                люди, которых приятно возить.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_7.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Круглосуточная поддержка</div>
+              <div class="reasons_text">
+                В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы
+                всегда можете задать вопрос через On-line консультацию.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icons/reason_8.png" alt="reason">
+            </div>
+            <div class="reasons_desc">
+              <div class="reasons_subtitle">Без шашечек и наклеек</div>
+              <div class="reasons_text">
+                Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
