--- a/looplab/index.html
+++ b/looplab/index.html
@@ -12,6 +12,30 @@
 
 <body>
     <!-- start here -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">LoopLab</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggle-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#explore-header-section" class="nav-link">Explore</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#create-header-section" class="nav-link">Create</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#share-header-section" class="nav-link">Share</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <span id="year"></span>
     <script src="https://kit.fontawesome.com/16f3f3709b.js"></script>
@@ -25,7 +49,7 @@
         crossorigin="anonymous"></script>
     <script>
         //get the current year for the copyright
-        $('#year').text(new Date().getFullYear());
+        //$('#year').text(new Date().getFullYear());
     </script>
 </body>
 
