connect plugin sass

--- a/uber/sass_intro/index.html
+++ b/uber/sass_intro/index.html
@@ -11,6 +11,7 @@
     <h2>Another Title</h2>
     <div class="block">
         <div class="block_color">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, eaque.</p>
             <button>Click me</button>
         </div>
         <h3>Hello</h3>
