--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -20,7 +20,7 @@
         <img src="img/mlogo.png" alt="" width="50" height="50">
         <h3 class="d-inline align-middle">Mizuxe</h3>
       </a>
-      <button class="navbar-toggler" data-toggler="collpase" data-target="#navbarCollapse">
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="navbarCollapse" class="collapse navbar-collapse">
