change sass folder in Uber

--- a/uber/src/index.html
+++ b/uber/src/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
   <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
 
   <title>Home</title>
 </head>
