--- a/uber/src/index.html
+++ b/uber/src/index.html
@@ -204,6 +204,54 @@
 
   </section>
 
+  <!-- section mobile -->
+
+  <section class="mobile">
+    <div class="container">
+      <div class="label">возможности</div>
+      <div class="title">мобильное приложение убер</div>
+      <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="mobile_item mobile_item_1">
+            <div class="mobile_item_subtitle">офрмление заказа одним нажатием</div>
+            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="mobile_item mobile_item_2">
+            <div class="mobile_item_subtitle">надежная подача</div>
+            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="mobile_item mobile_item_3">
+            <div class="mobile_item_subtitle">прозрачные цены</div>
+            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="mobile_item mobile_item_4">
+            <div class="mobile_item_subtitle">безналичная оплата</div>
+            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="mobile_item mobile_item_5">
+            <div class="mobile_item_subtitle">обратная связь</div>
+            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="mobile_item mobile_item_6">
+            <div class="mobile_item_subtitle">разделить стоимость поездки</div>
+            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
