add section Choice to Uber

--- a/uber/src/index.html
+++ b/uber/src/index.html
@@ -251,6 +251,19 @@
       </div>
     </div>
   </section>
+  <section id="choice">
+    <div class="container">
+      <div class="black"></div>
+      <div class="label label_white">возможности</div>
+      <h2 class="title title_white">Выбор- отличная штука!</h2>
+      <div class="subtitle subtitle_white">Закажите автомобиль, который подходит Вам по стилю и бюджету</div>
+      <img src="img/car.png" alt="" class="choice_img">
+      <div class="choice_desc">
+        Машины на каждый день.<br>
+        Лучше, быстрее и дешевле, чем такси
+      </div>
+    </div>
+  </section>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
