--- a/portfoliogrid/index.html
+++ b/portfoliogrid/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Bootstrap Theme</title>
 </head>
@@ -27,19 +28,23 @@
                 <h1 class="display-4">John Doe</h1>
                 <div class="d-none d-md-block">
                   <a href="http://twitter.com" class="text-white">
-                  <div class="fab fa-twitter"></div></a>
+                    <div class="fab fa-twitter"></div>
+                  </a>
                 </div>
                 <div class="d-none d-md-block">
                   <a href="http://facebook.com" class="text-white">
-                  <div class="fab fa-facebook"></div></a>
+                    <div class="fab fa-facebook"></div>
+                  </a>
                 </div>
                 <div class="d-none d-md-block">
                   <a href="http://instagram.com" class="text-white">
-                  <div class="fab fa-instagram"></div></a>
+                    <div class="fab fa-instagram"></div>
+                  </a>
                 </div>
                 <div class="d-none d-md-block">
                   <a href="http://github.com" class="text-white">
-                  <div class="fab fa-github"></div></a>
+                    <div class="fab fa-github"></div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -79,7 +84,8 @@
       </div>
       <div class="card card-body py-5">
         <h3>My Skills</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laudantium placeat necessitatibus praesentium nisi rerum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia laudantium placeat necessitatibus
+          praesentium nisi rerum!</p>
         <hr>
         <h4>HTML 5</h4>
         <div class="progress mb-3">
@@ -104,6 +110,168 @@
       </div>
     </div>
 
+    <!-- resume -->
+    <div id="resume" class="collapse">
+      <div class="card card-body bg-success text-white py-5">
+        <h2>My Resume</h2>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tenetur!</p>
+      </div>
+      <div class="card card-body py-5">
+        <h3>Where Have I worked?</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas deserunt neque veritatis accusamus consequatur
+          facere!</p>
+        <div class="card-deck">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Devmasters</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, aut.</p>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Position: Full Stack Developer
+              </p>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Phone: (444) 444-444
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2018-2020</h6>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">123 Designs</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, aut.</p>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Position: Web Designer
+              </p>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Phone: (222) 222-222
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2015-2018</h6>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Web dev Promo</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, aut.</p>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Position: Web Designer
+              </p>
+              <p class="p-2 mb-3 bg-dark text-white">
+                Phone: (111) 111-111
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2012-2015</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- work -->
+    <div id="work" class="collapse">
+      <div class="card card-body bg-warning text-white py-5">
+        <h2>My Work</h2>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tenetur!</p>
+      </div>
+      <div class="card card-body py-5">
+        <h3>What Have I Built?</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta tenetur dolorem quae aperiam velit
+          laboriosam!</p>
+        <div class="row no-gutters">
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=252" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=253" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=254" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=255" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=256" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=257" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=257" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=258" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=258" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1200/768.jpg?image=259" data-toggle="lightbox">
+              <img src="https://unsplash.it/600.jpg?image=259" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- contact -->
+    <div id="contact" class="collapse">
+      <div class="card card-body bg-danger text-white py-5">
+        <h2>Contact</h2>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tenetur!</p>
+      </div>
+      <div class="card card-body py-5">
+        <h3>Get In Touch</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni reiciendis fugit quisquam blanditiis
+          assumenda id.</p>
+        <form>
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                <span class="input-group-text bg-danger text-white">
+                  <i class="fas fa-user"></i>
+                </span>
+              </div>
+              <input type="text" class="form-control bg-dark text-white" placeholder="Name">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                <span class="input-group-text bg-danger text-white">
+                  <i class="fas fa-envelope"></i>
+                </span>
+              </div>
+              <input type="email" class="form-control bg-dark text-white" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                <span class="input-group-text bg-danger text-white">
+                  <i class="fas fa-pencil-alt"></i>
+                </span>
+              </div>
+              <textarea class="form-control bg-dark text-white" placeholder="Message"></textarea>
+            </div>
+          </div>
+          <input type="submit" value="Submit" class="btn btn-danger btn-block btn-lg">
+        </form>
+      </div>
+    </div>
 
     <!-- footer -->
     <footer id="main-footer" class="p-5 bg-dark text-white">
@@ -119,16 +287,25 @@
   </div>
 
 
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
 
   <script>
-    // Get the current year for the copyright
-    $('#year').text(new Date().getFullYear());
+    $('.port-item').click(function () {
+      $('.collapse').collapse('hide');
+    });
+
+    $(document).on('click', '[data-toggle="lightbox"]', function (e) {
+      e.preventDefault();
+      $(this).ekkoLightbox();
+    });
   </script>
 </body>
 
