--- a/uber/src/index.html
+++ b/uber/src/index.html
@@ -215,37 +215,37 @@
         <div class="col-md-4">
           <div class="mobile_item mobile_item_1">
             <div class="mobile_item_subtitle">офрмление заказа одним нажатием</div>
-            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+            <div class="mobile_item_plus"><img src="" alt=""></div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="mobile_item mobile_item_2">
             <div class="mobile_item_subtitle">надежная подача</div>
-            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+            <div class="mobile_item_plus"><img src="" alt=""></div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="mobile_item mobile_item_3">
             <div class="mobile_item_subtitle">прозрачные цены</div>
-            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+            <div class="mobile_item_plus"><img src="" alt=""></div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="mobile_item mobile_item_4">
             <div class="mobile_item_subtitle">безналичная оплата</div>
-            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+            <div class="mobile_item_plus"><img src="" alt=""></div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="mobile_item mobile_item_5">
             <div class="mobile_item_subtitle">обратная связь</div>
-            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+            <div class="mobile_item_plus"><img src="" alt=""></div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="mobile_item mobile_item_6">
             <div class="mobile_item_subtitle">разделить стоимость поездки</div>
-            <div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+            <div class="mobile_item_plus"><img src="" alt=""></div>
           </div>
         </div>
       </div>
@@ -262,6 +262,13 @@
         Машины на каждый день.<br>
         Лучше, быстрее и дешевле, чем такси
       </div>
+    </div>
+  </section>
+
+  <section class="require">
+    <div class="container">
+      <div class="label">возможности</div>
+      <div class="title">условия и требования</div>
     </div>
   </section>
 
