--- a/uber/src/index.html
+++ b/uber/src/index.html
@@ -55,7 +55,7 @@
                 Официальный партнер Uber в Москве
               </div>
             </div>
-            <div class="col-md-2 offset-md-2">
+            <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
               <div class="subheader_call">Звоните нам ежедневно</div>
               <a href="tel:84951234567" class="subheader_phone"
                 >8 495 123-45-67</a
