add _media.sass to Uber

--- a/uber/src/index.html
+++ b/uber/src/index.html
@@ -43,6 +43,11 @@
             </li>
           </ul>
         </div>
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
       <div class="subheader">
         <div class="container">
@@ -61,7 +66,7 @@
                 >8 495 123-45-67</a
               >
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
               <button class="subheader_btn">заказать звонок</button>
             </div>
           </div>
@@ -72,7 +77,7 @@
     <section class="promo">
       <div class="container">
         <div class="row">
-          <div class="col-md-10 offset-md-1">
+          <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
             <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
             <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ НА СВОЕМ АВТО!</h2>
             <div class="promo_desc">
@@ -327,14 +332,14 @@
                   ИП не требуется
                 </li>
                 <li>
-                  Заказы распределяются без учета рейтинга ближай-<br />шим
+                  Заказы распределяются без учета рейтинга ближай<br />шим
                   водителям
                 </li>
                 <li>
                   Работа только по безналичному расчету
                 </li>
                 <li>
-                  Деньги перечисляем на карту водителю или наличны-<br />ми в
+                  Деньги перечисляем на карту водителю или наличны<br />ми в
                   офисе
                 </li>
               </ul>
@@ -479,6 +484,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
