--- a/pulse/index.html
+++ b/pulse/index.html
@@ -21,7 +21,7 @@
                     <span>Garmin, Polar, Suunto</span>
                 </div>
                 <div class="header__contacts">
-                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <a href="tel:+74951234567" class="header__phone">+7 (495) 123-45-67</a>
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
@@ -33,7 +33,7 @@
                 <div class="promo__icons">
                     <div class="promo__icon">
                         <img src="icons/main_screen/timer.png" alt="timer">
-                        Время подбора:
+                        Время подбора
                         10 минут
                     </div>
                     <div class="promo__icon">
