--- a/pulse/src/index.html
+++ b/pulse/src/index.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
 
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button class="button button_main">заказать консультацию</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -67,7 +67,7 @@
                     <div class="advantages__subtitle">
                         Делимся опытом
                     </div>
-                    <div class="advantages__descr">
+                    <div class="advantages__desc">
                         Наши сотрудники всегда готовы поделиться своим опытом, 
                         так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                     </div>
@@ -77,7 +77,7 @@
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
-                    <div class="advantages__descr">
+                    <div class="advantages__desc">
                         Мы работаем для того, 
                         чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!           
                     </div>
@@ -87,7 +87,7 @@
                     <div class="advantages__subtitle">
                         Учим бегать
                     </div>
-                    <div class="advantages__descr">
+                    <div class="advantages__desc">
                         Помогаем с обучением 
                         правильной технике бега!<br>
                         Дружим с крупнейшей школой бега в России - 
